--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   cloud_firestore: ^4.14.0
   flutter_easyloading: ^3.0.5
+  intl: ^0.19.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
