--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_easyloading: ^3.0.5
   intl: ^0.19.0
   table_calendar: ^3.1.2
+  step_progress_indicator: ^1.0.2
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
